--- a/less/index.less
+++ b/less/index.less
@@ -57,3 +57,72 @@ html, body {
     height: 100%;
 }
 
+.container{
+	width:880px;
+	margin:0 auto;
+}
+header{
+	width:100%;
+	height:50px;
+	display:flex;
+	
+	margin:30px 0;
+	h1{
+		width:49.5%;
+		font-size:40px;
+		// border:3px solid black;
+		display:flex;
+		justify-content: center;
+		align-items: center;
+	}
+	nav{
+		width:50%;
+		// border:2px solid blue;
+		display:flex;
+		justify-content:space-between;
+
+		a{
+			font-size: 20px;
+			font-family: 'Cousine', sans-serif;
+			text-decoration: none;
+			display:flex;
+			align-items: center;
+		}
+	}
+}
+
+section{
+	
+		// border:2px solid red;
+		background-color: lightgrey;
+		height:600px;
+		display:flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		// align-items: stretch;
+		.image{
+			margin:5% 5%;
+			// border:2px solid blue;
+			width:30%;
+			height:60%;
+			img{
+				width:100%;
+				height:auto;
+			}
+		}
+		
+		p{
+			font-size:20px;
+			height:auto;
+			margin:0 5%;
+			// border:2px solid green;
+			line-height: 1.25;
+
+			
+		}
+	
+}
+
+.my-name{
+	font-size:50px;
+}
