--- a/css/index.css
+++ b/css/index.css
@@ -158,20 +158,26 @@ header nav {
 }
 header nav a {
   font-size: 20px;
+  color: black;
   font-family: 'Cousine', sans-serif;
   text-decoration: none;
   display: flex;
   align-items: center;
 }
+.my-name {
+  font-size: 45px;
+}
 section {
-  background-color: lightgrey;
-  height: 600px;
+  margin-bottom: 30px;
+  background-color: #f0f0f0;
+  height: 800px;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  padding: 50px 5%;
 }
 section .image {
-  margin: 5% 5%;
+  margin: 0 5%;
   width: 30%;
   height: 60%;
 }
@@ -185,6 +191,85 @@ section p {
   margin: 0 5%;
   line-height: 1.25;
 }
-.my-name {
-  font-size: 50px;
+section button {
+  border-radius: 10px;
+  width: 150px;
+  height: 40px;
+  margin: 0 5%;
+  font-size: 20px;
+  background-color: darkgray;
+  color: white;
+}
+.skills-content {
+  height: 270px;
+  padding: 0px;
+  display: flex;
+  flex-direction: row;
+  background-color: white;
+}
+.left-content {
+  width: 49%;
+  display: flex;
+  flex-direction: column;
+}
+.left-content p {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.left-content-1 {
+  width: 49%;
+  display: flex;
+  flex-direction: column;
+}
+.left-content-1 p {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+h2 {
+  text-align: center;
+  height: 40px;
+  font-size: 30px;
+}
+h3 {
+  text-align: center;
+  height: 40px;
+  font-size: 22px;
+}
+.languages {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px solid lightgray;
+  border-bottom: 0px;
+  height: 190px;
+}
+.languages div {
+  border-bottom: 1px solid lightgrey;
+  text-align: center;
+  width: 100%;
+  height: 62px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.work-content {
+  border: 2px solid red;
+}
+.work-content h2 {
+  font-size: 40px;
+}
+.work-content p {
+  border: 2px solid green;
+  display: flex;
+}
+.work-content p div {
+  border: 2px solid blue;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
