--- a/less/index.less
+++ b/less/index.less
@@ -61,6 +61,9 @@ html, body {
 	width:880px;
 	margin:0 auto;
 }
+
+
+
 header{
 	width:100%;
 	height:50px;
@@ -83,6 +86,7 @@ header{
 
 		a{
 			font-size: 20px;
+			color:black;
 			font-family: 'Cousine', sans-serif;
 			text-decoration: none;
 			display:flex;
@@ -91,17 +95,23 @@ header{
 	}
 }
 
+.my-name{
+	font-size:45px;
+}
+
 section{
 	
 		// border:2px solid red;
-		background-color: lightgrey;
-		height:600px;
+		margin-bottom:30px;
+		background-color:#f0f0f0;
+		height:800px;
 		display:flex;
 		flex-direction: column;
-		justify-content: space-evenly;
-		// align-items: stretch;
+		justify-content: space-between;
+		padding:50px 5%;
+		
 		.image{
-			margin:5% 5%;
+			margin:0 5%;
 			// border:2px solid blue;
 			width:30%;
 			height:60%;
@@ -112,6 +122,8 @@ section{
 		}
 		
 		p{
+			
+
 			font-size:20px;
 			height:auto;
 			margin:0 5%;
@@ -119,10 +131,115 @@ section{
 			line-height: 1.25;
 
 			
+			
+		}
+
+		button{
+			border-radius: 10px;
+			width:150px;
+			height:40px;
+			margin:0 5%;
+			font-size:20px;
+			background-color: darkgray;
+			color:white;
 		}
 	
 }
 
-.my-name{
-	font-size:50px;
+.skills-content{
+	height:270px;
+	padding:0px;
+	display:flex;
+	// border:2px solid red;
+	flex-direction: row;
+	// justify-content: center;
+	// align-items: center;
+	background-color: white;
+}
+
+.left-content{
+	width:49%;
+	display:flex;
+	flex-direction: column;
+	// border:2px solid blue;
+	// justify-content: center;
+	p{
+		display:flex;
+		flex-direction:column;
+		justify-content: center;
+		align-items: center;
+		// border:2px solid green;
+	}
+}
+
+.left-content-1{
+	width:49%;
+	display:flex;
+	flex-direction: column;
+	// border:1px solid lightgray;
+	// justify-content: center;
+	p{
+		display:flex;
+		flex-direction:column;
+		justify-content: center;
+		align-items: center;
+		// border:2px solid green;
+	}
+}
+
+h2{
+	text-align: center;
+	height:40px;
+	font-size:30px;
+}
+
+h3{
+	text-align: center;
+	height:40px;
+	font-size:22px;
+}
+
+.languages{
+	display:flex;
+	flex-direction: column;
+	// border-top:1px solid lightgrey;
+	justify-content: space-around;
+	align-items: center;
+	border:1px solid lightgray;
+	border-bottom:0px;
+	// border:2px solid darkgoldenrod;
+	height:190px;
+
+	div{
+		// padding-bottom:12px;
+		border-bottom:1px solid lightgrey;
+		text-align: center;
+		// border:2px solid red;
+		width:100%;
+		height:62px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+}
+
+.work-content{
+	border:2px solid red;
+	h2{
+		font-size:40px;
+	}
+
+	p{
+		border:2px solid green;
+		display:flex;
+		// flex-direction: row;
+		// justify-content: space-between;
+
+		div{
+			border:2px solid blue;
+			display:flex;
+			flex-direction: row;
+			justify-content: space-between;
+		}
+	}
 }
