--- a/css/index.css
+++ b/css/index.css
@@ -193,10 +193,10 @@ section p {
 }
 section button {
   border-radius: 10px;
-  width: 150px;
-  height: 40px;
+  width: 252px;
+  height: 55px;
   margin: 0 5%;
-  font-size: 20px;
+  font-size: 30px;
   background-color: darkgray;
   color: white;
 }
@@ -213,10 +213,7 @@ section button {
   flex-direction: column;
 }
 .left-content p {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin: 0px;
 }
 .left-content-1 {
   width: 49%;
@@ -226,22 +223,19 @@ section button {
 .left-content-1 p {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 h2 {
-  text-align: center;
   height: 40px;
   font-size: 30px;
 }
 h3 {
-  text-align: center;
   height: 40px;
-  font-size: 22px;
+  font-size: 25px;
 }
 .languages {
   display: flex;
   flex-direction: column;
+  font-size: 20px;
   justify-content: space-around;
   align-items: center;
   border: 1px solid lightgray;
@@ -249,7 +243,7 @@ h3 {
   height: 190px;
 }
 .languages div {
-  border-bottom: 1px solid lightgrey;
+  border-bottom: 1px solid lightgray;
   text-align: center;
   width: 100%;
   height: 62px;
@@ -258,18 +252,38 @@ h3 {
   align-items: center;
 }
 .work-content {
-  border: 2px solid red;
+  height: 450px;
+  background-color: white;
+  font-size: 20px;
 }
 .work-content h2 {
-  font-size: 40px;
+  border-bottom: 1px solid lightgray;
 }
-.work-content p {
-  border: 2px solid green;
-  display: flex;
-}
-.work-content p div {
-  border: 2px solid blue;
+.work-content-1 div {
+  border-bottom: 1px solid lightgray;
+  width: 100%;
+  height: 74px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+}
+.work-content-1 div p {
+  width: 197px;
+  margin: 0;
+  padding: 0px;
+}
+.work-1 {
+  background-color: lightgray;
+}
+.st-col {
+  padding-left: 10px;
+}
+footer p {
+  background-color: lightgray;
+  font-size: 20px;
+  width: 100%;
+  height: 75px;
+  text-align: center;
+  padding: 20px;
 }
