--- a/less/index.less
+++ b/less/index.less
@@ -57,6 +57,13 @@ html, body {
     height: 100%;
 }
 
+.content(){
+	display:flex;
+	flex-direction: column;
+}
+@font:20px;
+@lightgray:lightgray;
+
 .container{
 	width:880px;
 	margin:0 auto;
@@ -85,7 +92,7 @@ header{
 		justify-content:space-between;
 
 		a{
-			font-size: 20px;
+			font-size: @font;
 			color:black;
 			font-family: 'Cousine', sans-serif;
 			text-decoration: none;
@@ -105,8 +112,7 @@ section{
 		margin-bottom:30px;
 		background-color:#f0f0f0;
 		height:800px;
-		display:flex;
-		flex-direction: column;
+		.content;
 		justify-content: space-between;
 		padding:50px 5%;
 		
@@ -124,7 +130,7 @@ section{
 		p{
 			
 
-			font-size:20px;
+			font-size:@font;
 			height:auto;
 			margin:0 5%;
 			// border:2px solid green;
@@ -136,10 +142,10 @@ section{
 
 		button{
 			border-radius: 10px;
-			width:150px;
-			height:40px;
+			width:252px;
+			height:55px;
 			margin:0 5%;
-			font-size:20px;
+			font-size:30px;
 			background-color: darkgray;
 			color:white;
 		}
@@ -159,49 +165,47 @@ section{
 
 .left-content{
 	width:49%;
-	display:flex;
-	flex-direction: column;
+	.content;
 	// border:2px solid blue;
 	// justify-content: center;
 	p{
-		display:flex;
-		flex-direction:column;
-		justify-content: center;
-		align-items: center;
+		margin:0px;
+		// display:flex;
+		// flex-direction:column;
+		// justify-content: center;
+		// align-items: center;
 		// border:2px solid green;
 	}
 }
 
 .left-content-1{
 	width:49%;
-	display:flex;
-	flex-direction: column;
+	.content;
 	// border:1px solid lightgray;
 	// justify-content: center;
 	p{
-		display:flex;
-		flex-direction:column;
-		justify-content: center;
-		align-items: center;
+		.content;
+		// justify-content: center;
+		// align-items: center;
 		// border:2px solid green;
 	}
 }
 
 h2{
-	text-align: center;
+	// text-align: center;
 	height:40px;
 	font-size:30px;
 }
 
 h3{
-	text-align: center;
+	// text-align: center;
 	height:40px;
-	font-size:22px;
+	font-size:25px;
 }
 
 .languages{
-	display:flex;
-	flex-direction: column;
+	.content;
+	font-size: @font;
 	// border-top:1px solid lightgrey;
 	justify-content: space-around;
 	align-items: center;
@@ -212,7 +216,7 @@ h3{
 
 	div{
 		// padding-bottom:12px;
-		border-bottom:1px solid lightgrey;
+		border-bottom:1px solid @lightgray;
 		text-align: center;
 		// border:2px solid red;
 		width:100%;
@@ -223,23 +227,61 @@ h3{
 	}
 }
 
-.work-content{
-	border:2px solid red;
+.work-content {
+	// border:1px solid red;
+	height:450px;
+	background-color: white;
+	font-size:@font;
+	// display:flex;
+	// flex-direction: column;
+
 	h2{
-		font-size:40px;
+		// border:1px solid green;
+		border-bottom:1px solid @lightgray;
 	}
+}
+
+
+
+.work-content-1{ 
+	div{
+	// border:1px solid blue;
+	border-bottom:1px solid @lightgray;
+	// margin:0px;
+	width:100%;
+	height:74px;
+	display:flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
 
 	p{
-		border:2px solid green;
-		display:flex;
-		// flex-direction: row;
-		// justify-content: space-between;
-
-		div{
-			border:2px solid blue;
-			display:flex;
-			flex-direction: row;
-			justify-content: space-between;
-		}
+		width:197px;
+		// border:2px solid darkorange;
+		margin:0;
+		padding:0px;
 	}
+
+}	
+}
+
+
+
+.work-1{
+	background-color: @lightgray;
+}
+
+.st-col{
+	padding-left:10px;
+}
+
+footer{
+	 p{
+	background-color: @lightgray;
+	font-size: @font;
+	width:100%;
+	height:75px;
+	text-align: center;
+	padding:20px;
+}
 }
