--- a/css/index.css
+++ b/css/index.css
@@ -138,6 +138,12 @@ body {
   width: 880px;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  .container {
+    width: 100%;
+    margin: 0 auto;
+  }
+}
 header {
   width: 100%;
   height: 50px;
@@ -286,4 +292,66 @@ footer p {
   height: 75px;
   text-align: center;
   padding: 20px;
+}
+@media (max-width: 500px) {
+  .header-content {
+    width: 100%;
+    height: 500px;
+    flex-direction: column;
+    margin: 0px;
+  }
+  .header-content h1 {
+    flex-direction: column;
+    width: 100%;
+    height: 100px;
+    margin-top: 80px;
+    border-bottom: 1px solid lightgray;
+  }
+  .header-content nav {
+    width: 100%;
+    flex-direction: column;
+    height: 300px;
+    align-items: center;
+  }
+  .header-content nav a {
+    height: 80px;
+    width: 100%;
+    border-bottom: 1px solid lightgray;
+    justify-content: center;
+  }
+  .middle-content {
+    height: 1000px;
+  }
+  .middle-content .image {
+    margin: 0 10%;
+    width: 80%;
+    height: 56%;
+  }
+  .middle-content .my-name {
+    order: -1;
+  }
+  .middle-content button {
+    margin: 0 20%;
+  }
+  .skills-content {
+    flex-direction: column;
+    padding: 0 20%;
+    margin-bottom: 20px;
+  }
+  .skills-content .left-content {
+    width: 79%;
+    margin-bottom: 20px;
+  }
+  .skills-content .left-content h2 {
+    margin-bottom: 10px;
+  }
+  .skills-content .left-content-1 {
+    width: 79%;
+  }
+  .st-col {
+    display: none;
+  }
+  .st-col-1 {
+    display: none;
+  }
 }
