--- a/less/index.less
+++ b/less/index.less
@@ -67,6 +67,11 @@ html, body {
 .container{
 	width:880px;
 	margin:0 auto;
+
+	@media(max-width:500px){
+		width:100%;
+		margin:0 auto;
+	}
 }
 
 
@@ -100,6 +105,8 @@ header{
 			align-items: center;
 		}
 	}
+
+	
 }
 
 .my-name{
@@ -285,3 +292,90 @@ footer{
 	padding:20px;
 }
 }
+
+// @media(max-width:500px){
+
+// 	.container{
+// 		width:100%;
+// 	}
+// }
+
+@media(max-width:500px){
+
+	.header-content{
+		width:100%;
+		height: 500px;
+		flex-direction: column;
+		margin:0px;
+		// margin-top:50px;
+	}
+
+	.header-content	h1{
+			flex-direction: column;
+			width:100%;
+			height: 100px;
+			margin-top:80px;
+			border-bottom:1px solid @lightgray;
+		}
+
+	.header-content	nav{
+			width:100%;
+			flex-direction: column;
+			height:300px;
+			align-items: center;
+
+			a{
+				height: 80px;
+				width: 100%;
+				// border: 1px solid black;
+				border-bottom:1px solid @lightgray;
+				justify-content: center;
+			}
+		}
+
+		.middle-content{
+			height:1000px;
+
+			.image{
+				margin: 0 10%;
+				width: 80%;
+				
+				height: 56%;
+			}
+
+			.my-name{
+				order:-1;
+			}
+
+			button{
+				margin:0 20%;
+			}
+		}
+
+		.skills-content{
+			flex-direction: column;
+			padding: 0 20%;
+			margin-bottom: 20px;
+			
+			.left-content{
+				width:79%;
+				margin-bottom:20px;
+
+				h2{
+					margin-bottom: 10px;
+				}
+			}
+
+			.left-content-1{
+				width:79%;
+			}
+		}
+
+		.st-col{
+			display:none;
+		}
+
+		.st-col-1{
+			display:none;
+		}
+	}
